# qda_local

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  models  pyproject.toml  q  qda_local.code-workspace  run.sh  run_local.sh  stop
backend/: Dockerfile
backend/app/: main.py  requirements.txt  style.py
config/: models.yaml  policies.yaml
web_templ/: index.html
worker/: Dockerfile  README_CACHING.md  analyze.py  cache.py  check_cache.py  check_global_cache.py  dynamics.py  html_report.py  loaders.py  main.py  networks.py  pipeline.py  preload_models.py  refiqda.py  reports.py  requirements.txt  requirements_new.txt  requirements_torch.txt  stances.py  util.py
worker/hide/: xxmain.py  xxpipeline.py  xxpipeline.py.bak  xxrefiqda.py  xxstances.py
