[project]
name = "qda-local"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "diskcache>=5.6.3",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "markdown>=3.8.2",
    "networkx>=3.5",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "scikit-learn>=1.7.1",
    "sentence-transformers>=5.1.0",
    "spacy>=3.8.7",
    "textblob-de==0.4.3",
    "transformers>=4.55.0",
    "uvicorn>=0.35.0",
]
